--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,13 +3,8 @@
   "short_name": "smyle-cashier",
   "icons": [
     {
-      "src": "./img/icons/android-chrome-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "./img/icons/android-chrome-512x512.png",
-      "sizes": "512x512",
+      "src": "./favicon.ico",
+      "sizes": "64x64",
       "type": "image/png"
     }
   ],
